# diffusers

./: pyproject.toml
examples/unconditional_image_generation/: train_unconditional.py
src/diffusers/models/: attention_processor.py  resnet.py  unet_2d.py  unet_2d_blocks.py  unet_2d_condition.py
src/diffusers/pipelines/ddim/: pipeline_ddim.py
src/diffusers/pipelines/ddpm/: pipeline_ddpm.py
src/diffusers/schedulers/: scheduling_ddim.py
