[tool.poetry]
name = "diffusers"
version = "0.20.0.dev0"
description = "State-of-the-art diffusion in PyTorch and JAX."
authors = ["Esteve Soria <esofabian@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/huggingface/diffusers"
repository = "https://github.com/huggingface/diffusers"
documentation = "https://github.com/huggingface/diffusers"
keywords = ["deep learning", "diffusion", "jax", "pytorch", "stable diffusion", "audioldm"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
packages = [
    { include = "diffusers", from = "src" },
]
include = ["src/diffusers/py.typed"]

[tool.poetry.dependencies]
python = ">=3.8.0,<4.0"
Pillow = "*"
accelerate = ">=0.31.0"
compel = "0.1.8"
datasets = "*"
filelock = "*"
flax = ">=0.4.1"
hf-doc-builder = ">=0.3.0"
huggingface-hub = ">=0.23.2"
requests-mock = "1.10.0"
importlib_metadata = "*"
invisible-watermark = ">=0.2.0"
isort = ">=5.5.4"
jax = ">=0.4.1"
jaxlib = ">=0.4.1"
Jinja2 = "*"
k-diffusion = ">=0.0.12"
torchsde = "*"
note_seq = "*"
librosa = "*"
numpy = "*"
parameterized = "*"
peft = ">=0.6.0"
protobuf = ">=3.20.3,<4"
pytest = "*"
pytest-timeout = "*"
pytest-xdist = "*"
ruff = "0.1.5"
safetensors = ">=0.3.1"
sentencepiece = ">=0.1.91,!=0.1.92"
GitPython = "<3.1.19"
scipy = "*"
onnx = "*"
regex = "!=2019.12.17"
requests = "*"
tensorboard = "*"
torch = ">=1.4"
torchvision = "*"
transformers = ">=4.41.2"
urllib3 = "<=2.0.0"
black = "*"

[tool.poetry.group.dev.dependencies]
urllib3 = "*"
isort = "*"
ruff = "*"
hf-doc-builder = "*"
GitPython = "*"
datasets = "*"
Jinja2 = "*"
invisible-watermark = "*"
k-diffusion = "*"
librosa = "*"
parameterized = "*"
pytest = "*"
pytest-timeout = "*"
pytest-xdist = "*"
requests-mock = "*"
safetensors = "*"
sentencepiece = "*"
scipy = "*"
torchvision = "*"
transformers = "*"

[tool.poetry.group.flax]
optional = true

[tool.poetry.group.flax.dependencies]
jax = "*"
jaxlib = "*"
flax = "*"

[tool.poetry.scripts]
diffusers-cli = "diffusers.commands.diffusers_cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 119
target-version = ['py37']

[tool.ruff]
# Never enforce `E501` (line length violations).
ignore = ["C901", "E501", "E741", "W605"]
select = ["C", "E", "F", "I", "W"]
line-length = 119

# Ignore import violations in all `__init__.py` files.
[tool.ruff.per-file-ignores]
"__init__.py" = ["E402", "F401", "F403", "F811"]
"src/diffusers/utils/dummy_*.py" = ["F401"]

[tool.ruff.isort]
lines-after-imports = 2
known-first-party = ["diffusers"]
